# pysomo

./: .flake8  .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
.github/workflows/: python-app.yml
examples/: coin.py  stairs.py
pysomo/: __init__.py  export.py  figures.py
src/: setup.py
src/pysomo/: export.py  figures.py  tree.py
src/tests/: test_simple.py
tests/: test_simple.py
